docs/versioned_docs/version-1.0.0/reference/messages.mdx
<!-- Generated by port_legacy_docs.py v2 from v1.0.0 (3125e5c1e7bc33b5bfd5723806e01f14810511a6). Historical snapshot—do not edit directly. -->

<a id="messages"></a>
# Messages

### Message {#messages.Message}

**Class**

```python
Message(channel: str, text: Optional[str] = '', blocks: Optional[Union[List[Block], Block]] = None, attachments: Optional[List[Attachment]] = None, thread_ts: Optional[str] = None, mrkdwn: bool = True, unfurl_links: Optional[bool] = None, unfurl_media: Optional[bool] = None)
```

<div className="api-docstring">

A Slack message object that can be converted to a JSON string for use with
the Slack message API.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `channel` | `str` | — |
| `text` | `Optional[str]` | markdown text to send in the message. If `blocks` are provided<br />then this is a fallback to display in notifications. |
| `blocks` | `Optional[Union[List[Block], Block]]` | a list of [`Blocks`](/v1.0.0/reference/blocks) to form the contents<br />of the message instead of the contents of `text`. |
| `attachments` | `Optional[List[Attachment]]` | a list of<br />[`Attachments`](/v1.0.0/reference/attachments#attachments.Attachment)<br />that form the secondary contents of the message (deprecated). |
| `thread_ts` | `Optional[str]` | the timestamp ID of another unthreaded message that will<br />become the parent message of this message (now a reply in a thread). |
| `mrkdwn` | `bool` | if `True` the contents of `text` will be rendered as markdown<br />rather than plain text. |
| `unfurl_links` | `Optional[bool]` | if `True`, links in the message will be automatically<br />unfurled. |
| `unfurl_media` | `Optional[bool]` | if `True`, media from links (e.g. images) will<br />automatically unfurl. |

Raises:
    InvalidUsageException: in the event that the items passed to `blocks`
        are not valid [`Blocks`](/v1.0.0/reference/blocks).

</div>
